# QT_VideoStream_Processing

./: CMakeLists.txt  README.md  basecamera.cpp  basecamera.h  encoder.cpp  encoder.h  imgprocessor.cpp  imgprocessor.h  lowleveltasks.cpp  lowleveltasks.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  proctask.h  servercore.cpp  servercore.h
android/: AndroidManifest.xml
